attempted fix to background image cutoff on landscape mobile

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -114,6 +114,7 @@ iframe{
 @media only screen and (max-device-width: 1366px) {
   .parallax {
     background-attachment: scroll;
+    background-size: 100% 100%;
   }
 }
 
